# Pupe

./: .env  .gitignore  app.py  main.ipynb  pyproject.toml
src/Agent/: builder.py  nodes.py  router_schema.py  state.py  tools.py
src/DB/: db_config.py
src/Model_Provider/: __init__.py  llm_config.py
src/Utils/: logger_config.py
