[project]
name = "pupe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain-groq>=1.1.0",
    "langgraph>=1.0.4",
    "loguru>=0.7.3",
    "mariadb>=1.1.14",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
]
